Update for ezgo14

--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
   <div class="slide" id="slide-1">
     <section class="slide-content"><p><h1 style="font-size: 72px">
-    Stay Hungry,<br />
-    Stay Foolish.
+    Enlightenment<br />
+    從啟蒙觸發
 </h1>
 <br /></p>
 <h2 id="denny-huang">Denny Huang</h2>
-<h2 id="2018-06-10-infas">2018/06/10 @ INFAS</h2>
+<h2 id="2018-07-18-ezgo14-">2018/07/18 @ ezgo14 發表會</h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
@@ -441,16 +441,15 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </div></section>
   </div>
   <div class="slide hidden" id="slide-11">
-    <section class="slide-content"><h1 id="-">學校教育？</h1>
+    <section class="slide-content"><h1 id="-">國中</h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-12">
-    <section class="slide-content"><h1 id="-">高中 / 高職</h1>
+    <section class="slide-content"><h1 id="gnu-linux"><a href="https://www.gnu.org/home.zh-tw.html">GNU / Linux</a></h1>
 </section>
   </div>
   <div class="slide hidden" id="slide-13">
-    <section class="slide-content"><h1 id="-">大學 / 研究所</h1>
-</section>
+    <section class="slide-content"><iframe width="800" height="600" src="https://www.youtube.com/embed/6NhyCXJU-IQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></section>
   </div>
   <div class="slide hidden" id="slide-14">
     <section class="slide-content"><h1 id="-">獨立思考</h1>
@@ -498,65 +497,48 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </div></section>
   </div>
   <div class="slide hidden" id="slide-23">
-    <section class="slide-content"><h1 id="-">斜槓青年</h1>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-24">
-    <section class="slide-content"><h1 id="-">第一份打工?</h1>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-25">
-    <section class="slide-content"><div align="center">
-    <img style="width: 800px" src="./img/magic.jpg" />
-</div></section>
-  </div>
-  <div class="slide hidden" id="slide-26">
-    <section class="slide-content"><div align="center">
-    <img style="width: 800px" src="./img/incredibleace.jpg" />
-</div></section>
-  </div>
-  <div class="slide hidden" id="slide-27">
-    <section class="slide-content"><div align="center">
-    <img style="height: 600px" src="./img/7-8.jpg" />
-</div></section>
-  </div>
-  <div class="slide hidden" id="slide-28">
     <section class="slide-content"><h1 id="-">社團</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-29">
+  <div class="slide hidden" id="slide-24">
     <section class="slide-content"><h1 id="-">社群</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-30">
-    <section class="slide-content"><h1 id="openfoundry">OpenFoundry</h1>
+  <div class="slide hidden" id="slide-25">
+    <section class="slide-content"><h1 id="openfoundry"><a href="https://www.openfoundry.org/">OpenFoundry</a></h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-31">
-    <section class="slide-content"><h1 id="coscup">COSCUP</h1>
+  <div class="slide hidden" id="slide-26">
+    <section class="slide-content"><h1 id="coscup"><a href="http://coscup.org">COSCUP</a></h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-32">
-    <section class="slide-content"><h1 id="sitcon">SITCON</h1>
+  <div class="slide hidden" id="slide-27">
+    <section class="slide-content"><h1 id="sitcon"><a href="https://sitcon.org">SITCON</a></h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-33">
-    <section class="slide-content"><h1 id="-">大學選擇</h1>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-34">
+  <div class="slide hidden" id="slide-28">
     <section class="slide-content"><h1 id="-">家庭鬥爭？</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-35">
+  <div class="slide hidden" id="slide-29">
     <section class="slide-content"><h1 id="-">聲明</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-36">
+  <div class="slide hidden" id="slide-30">
     <section class="slide-content"><h1 id="q-a">Q &amp; A</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-37">
+  <div class="slide hidden" id="slide-31">
+    <section class="slide-content"><h3 id="references">References</h3>
+<ul>
+<li><p><a href="https://paper.dropbox.com/doc/Revolution-OS---AH1k67i5ULdOpqw_bM1rO5kDAg-KwFsVDO0MpMUxSmOfPfuI">從 Revolution OS 看作業系統生態變化</a></p>
+</li>
+<li><p><a href="https://www.youtube.com/watch?v=VoLUvE-ny1k">Code Rush: Netscape Mozilla 紀錄片 1998 - 2000 （中文字幕）</a></p>
+</li>
+</ul>
+</section>
+  </div>
+  <div class="slide hidden" id="slide-32">
     <section class="slide-content"><h1 style="font-size: 72px">
   Thanks for listening!
 </h1>
